[package]
name = "true_north_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
async-graphql = { version = "6.0", features = ["chrono"] }
async-graphql-axum = "6.0"
bcrypt = "0.15"
chrono = "0.4.41"
jsonwebtoken = "9.0.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1.88"
